Updates from Overleaf

--- a/sections/method.tex
+++ b/sections/method.tex
@@ -10,8 +10,8 @@ storage, and by using Tweets API the data are completed to be analyzed and
 stored in the Elasticsearch server. 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.5\textwidth]{imgs/Research_Method.png}
-\caption{Research Method}
+\includegraphics[width=0.5\textwidth]{imgs/freamwork.jpg}
+\caption{System structure}
 \label{fig:Research Method}
 \end{figure}
 In dataset processing step, after importing data into Elasticsearch server in
@@ -125,8 +125,8 @@ Example of these regular expression technique is shown in the (Figure~\ref
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{imgs/cleaning_w_regex.png}
-    \caption{\label{fig:Right-most column}Right-most column showing cleaned text with Regex}
-    \label{fig:regex}
+    \caption{Right-most column showing cleaned text with Regex}
+    \label{fig:Right-most column}
 \end{figure}
 After cleaning the data, it was added as a new column in the data frame. The
 data frame then was used to generate a word cloud using a Python package
@@ -146,7 +146,8 @@ distribution of possible terms (words).
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/topic_clusters.png}
-\caption{\label{fig:Shows the conceptual} Shows the conceptual document space and topic clusters}
+\caption{ Shows the conceptual document space and topic clusters}
+\label{fig:Shows the conceptual}
 \end{figure}
 The size of the circle in (Figure~\ref{fig:Shows the conceptual2}) determines
 the number of documents that correspond to the number of clusters. For
@@ -155,7 +156,8 @@ Cluster 3.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{imgs/term_clusters.png}
-\caption{\label{fig:Shows the conceptual2} Shows the conceptual topic space and term clusters}
+\caption{ Shows the conceptual topic space and term clusters}
+\label{fig:Shows the conceptual2}
 \end{figure}
 In the (Figure~\ref{fig:Completed dataset}), the circle size of the term
 clusters visualize the frequency of the terms appearing in the documents.
