--- a/sections/method.tex
+++ b/sections/method.tex
@@ -35,7 +35,7 @@ applied with the machine learning models to be analyzed.
 The dataset we used is CORONAVIRUS (COVID-19) GEO-TAGGED TWEETS DATASET form
 IEEE DataPort. Due to the tweets spreading policy. We can't access the
 completed tweets content directly.  Thus. We use a transfer program named
-Twarc to batch fetch every tweets in the dataset. Twarc is a python package
+Twarc to batch fetch tweets in the dataset. Twarc is a python package
 that used to export tweets automatically.  The main principle is that Twarc
 will make use of the registration information from twitter developer platform
 and get the permission from Twitter. Then Twitter can monitor the whole
