--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@ social media analysis, pandemic, topic modeling, storyline generation
 % \input{sections/related}
 \input{sections/method}
 \input{sections/experiment}
-\input{sections/discussion}
+\input{sections/case}
 \input{sections/conclusion}
 
 \bibliographystyle{IEEEtran}
