--- a/sections/case.tex
+++ b/sections/case.tex
@@ -1,4 +1,5 @@
-\section{Discussion}
+\section{Case Studies}
+\label{sec:case}
 In this project we propose a model mapping some spatio-temporal data into a
 map once getting such dataset from Twitter. This model successfully take
 pre-processed twitter data and return visualized result of distribution of
