--- a/sections/method.tex
+++ b/sections/method.tex
@@ -1,4 +1,5 @@
-\section{Method and Data} \label{sec:method_and_data}
+\section{Method and Data} 
+\label{sec:method}
 From a holistic view of research method (Figure~\ref{fig:Research Method}), it
 consists of three independent but relational parts of the dataset import,
 dataset Processing, and machine model training for making binary classifier.
