--- a/references.bib
+++ b/references.bib
@@ -282,3 +282,83 @@
 }
 
 
+@article{fang2011rex,
+  title={Rex: explaining relationships between entity pairs},
+  author={Fang, Lujun and Sarma, Anish Das and Yu, Cong and Bohannon, Philip},
+  journal={arXiv preprint arXiv:1111.7170},
+  year={2011}
+}
+
+@inproceedings{hossain2012storytelling,
+  title={Storytelling in entity networks to support intelligence analysts},
+  author={Hossain, M Shahriar and Butler, Patrick and Boedihardjo, Arnold P and Ramakrishnan, Naren},
+  booktitle={Proceedings of the 18th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1375--1383},
+  year={2012}
+}
+
+@article{kumar2008algorithms,
+  title={Algorithms for storytelling},
+  author={Kumar, Deept and Ramakrishnan, Naren and Helm, Richard F and Potts, Malcolm},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={20},
+  number={6},
+  pages={736--751},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{kim2014joint,
+  title={Joint summarization of large-scale collections of web images and videos for storyline reconstruction},
+  author={Kim, Gunhee and Sigal, Leonid and Xing, Eric P},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={4225--4232},
+  year={2014}
+}
+
+@inproceedings{lee2012joint,
+  title={Joint entity and event coreference resolution across documents},
+  author={Lee, Heeyoung and Recasens, Marta and Chang, Angel and Surdeanu, Mihai and Jurafsky, Dan},
+  booktitle={Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  pages={489--500},
+  year={2012}
+}
+
+@inproceedings{lin2012generating,
+  title={Generating event storylines from microblogs},
+  author={Lin, Chen and Lin, Chun and Li, Jingxuan and Wang, Dingding and Chen, Yang and Li, Tao},
+  booktitle={Proceedings of the 21st ACM international conference on Information and knowledge management},
+  pages={175--184},
+  year={2012}
+}
+
+@article{park2015expressing,
+  title={Expressing an image stream with a sequence of natural sentences},
+  author={Park, Cesc C and Kim, Gunhee},
+  journal={Advances in neural information processing systems},
+  volume={28},
+  year={2015}
+}
+
+@inproceedings{shahaf2012metro,
+  title={Metro maps of science},
+  author={Shahaf, Dafna and Guestrin, Carlos and Horvitz, Eric},
+  booktitle={Proceedings of the 18th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1122--1130},
+  year={2012}
+}
+
+@inproceedings{voskarides2015learning,
+  title={Learning to explain entity relationships in knowledge graphs},
+  author={Voskarides, Nikos and Meij, Edgar and Tsagkias, Manos and De Rijke, Maarten and Weerkamp, Wouter},
+  booktitle={Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+  pages={564--574},
+  year={2015}
+}
+
+@inproceedings{wang2012generating,
+  title={Generating pictorial storylines via minimum-weight connected dominating set approximation in multi-view graphs},
+  author={Wang, Dingding and Li, Tao and Ogihara, Mitsunori},
+  booktitle={Twenty-sixth AAAI conference on artificial intelligence},
+  year={2012}
+}
