--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,4 +1,5 @@
-[\section{Conclusion}
+\section{Conclusion}
+\label{sec:conclude}
 In this project, our team carried out a machine learning-based spatial
 modeling of sentiment towards the pandemic. A rationale for this research
 comes from the increased interest on analyzing a lot of issues related to
