--- a/sections/experiment.tex
+++ b/sections/experiment.tex
@@ -1,4 +1,5 @@
 \section{Experimental Results}
+\label{sec:exp}
 \subsection{Tweet Data Collection and Processing}
 \subsubsection{Processed dataset structure}
 \begin{figure}[h]
