--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,89 +1,76 @@
 \section{Introduction}
-Social media has become an inseparable part of people’s daily life. Especially
-when an important incident happens, people tend to express their opinion on
-SNS. Using these data for analysis, we can understand how people react to
-such news events. In case of pandemic, this will provide a reference for the
-development of epidemic prevention measures and evaluation. As for such
-sentiment analysis several approaches have been done, and some previous
-studies accomplished success by using machine learning technique. Kastrat el
-al.(2021)~\cite{kastrati2021deep} used a deep learning based sentiment
-analyser called ALBANA is proposed and validated on the collected and curated
-COVID-19 dataset. They apply an attention mechanism to characterize the word
-level interactions within a local and global context to capture the semantic
-meaning of words. Among other logical approaches, there is a study~\cite
-{chakraborty2020sentiment} proposes the implementation of fuzzy logic for
-taming the fuzziness of sentiments. As fuzzy sets are ideally suited to
-counter the ambiguities in life, the authors have proposed the initial
-integration of fuzzy logic in effectively handling the sentiment
-identification of tweets (Chakraborty et al., 2020). This approach provides
-ideas for a more precise study of emotional factors in texts.
+\label{sec:intro}
+The rampaging COVID-19 pandemic has greatly affected emotion and everyone’s
+daily life in the past two years. The general public’s emotions went through
+a roller coaster-like up-and-downs: shocked by the deadly known disease,
+overwhelmed by misinformation, upset by the mitigation policies, and
+regaining confidence with the development of vaccines. Ubiquitous user-input
+content on social media and online services have generated a tremendous
+amount of information that can reflect the users’ emotion and opinion towards
+social events. With the abundance of the generated social media data during
+the pandemic, more users intend to express their emotions and opinions about
+COVID-19-related social events, such as the mitigation policies or the
+invention of the vaccines. Such dramatic social media data increase provides
+great research opportunities in social media mining and natural language
+processing.  
 
-In order to more accurately study and even predict the changing trend of
-people’s thinking to the epidemic, we use a machine learning and deep
-learning model to analyze the sentiment scores of tweets. We develop a binary
-classifier peoples' sentiment into positive and negative classes. 
+Spatiotemporal sentiment analysis is one of the target research areas in
+social media analysis for COVID-19. In the case of pandemics, spatiotemporal
+sentiment analysis provides a reference for the development of epidemic
+mitigation measures and evaluation techniques. In the context of sentiment
+analysis, some previous studies accomplished success by using the machine
+learning technique. For instance, previous work~\cite{kastrati2021deep} used
+a deep learning-based sentiment analyzer to collect and curate the COVID-19
+dataset. Attention mechanisms were applied to characterize the word-level
+interactions within a local and global context to capture the semantic
+meaning of words. Among other logical approaches, Chakraborty et al.~\cite
+{chakraborty2020sentiment} propose the implementation of fuzzy logic for
+taming the fuzziness of sentiments. However, the existing works in social
+media sentiment analysis lack the consideration of spatial and temporal
+factors. Our proposed system provides both spatial and temporal aspects of
+sentiment analysis under the topic of COVID-19. 
 
-Beyond the classification, such Machine Learning or Deep Learning-based
-approaches have been tried in many studies.~\cite
-{chintalapudi2021sentimental} used a Bidirectional Transformer based model to
-analyze sentiments of Indian citizens and compare the results with existing
-models. Weighting sentiments between a negative and positive perspective from
-the social media posts has been suggested by~\cite{alshalan2020detection} who
-used CNN-based model to score the sentiment between 0 and 1, 1 being the most
-negative and 0 being the most positive sentiment in text. False news spread
-regarding COVID-19 is a prominent task in epidemic modeling.~\cite
-{abdelminaam2021coaid} proposed a Modified-LSTM based model to detect fake
-news regarding COVID-19 which can used to separate the unintentional biases
-in a COVID-19 data stream and learn the meta features of a falsely claimed
-COVID-19 sentiment. There is also a study analyzing public response to COVID
-by utilizing Twitter data in a purpose of extracting and somewhat monitoring
-major public opinion. Based on the machine learning method Latent Dirichlet
-Allocation (LDA) with sentiment analysis on a list of COVID-19–related
-hashtags as search terms to fetch tweets, Xue et al.(2020) reports several
-significant results that the public uses a variety of terms when referring to
-COVID-19, including virus, COVID-19, coronavirus, and corona virus, and that
-public discussions about the Chinese Communist Party (CCP) and the spread of
-the virus emerged as a new topic that was not identified in previous studies.
-Alamoodi et al.(2021) provides a valuable review on different studies about
-sentiment analysis on not only the COVID outbreak but also numerous epidemics
-such as the Ebola, Middle East respiratory syndrome(MERS), N1H1 and Zika
-which are observed for the last several decades in human history~\cite
-{alamoodi2021sentiment}. For classifying the public sentiment into positive,
-negative and neutral group, Jalil et al.(2022) adopts the natural language
-processing model (NLP) Transformer and its expanded version BERT
-(Bidirectional Encoder Representations from Transformers). Although this
-study is simply focused on classification task on the sentiment analysis, its
-research method hints to our project about the possibility of NLP usage in
-this field~\cite{jalil2021covid}.
+Topic detection and modeling are the second focus of our proposed system.
+Topic detection is an important part of addressing the said problem to
+separate points of interest among many candidates. Several noble studies have
+been conducted in the last few decades to mine the most appropriate topic
+associated with a text phrase. A topic graph-based approach was proposed by
+Batool et al.~\cite{batool2013precise} where a topic graph from vectorized
+Twitter data was proposed with term frequency as a heuristic and social
+relationship between the virtual users. Other work~\cite
+{xie2016unsupervised} proposed a time-dependent burst detection technique
+that focuses on two and three-word data acceleration as a spread tendency to
+make early detection based on the keywords. Abd-Alrazaq et al.~\cite
+{abd2020top} used Latent Dirichlet Allocation (LDA) for topic modeling on
+English twitter data. Gencoglu et al.~\cite{gencoglu2020large} used a large
+Twitter dataset to analyze semantic topic clusters using Language Agnostic
+BERT Sentence Embeddings (LaBSE). We combine the advantages of LDA and neural
+network models to develop a transformative model for topic discovery and
+monitoring components in the system. 
 
-Furthermore, as for the spatio-temporal analysis, specifically on using social
-media to track the spread of infectious disease, it has been a long time
-since some attempts have been made even before COVID19 outbreak. For example,
-there is a study to track disease activity about the notorious influenza H1N1
-and swine flue in 2010s and related public sentiment~\cite
-{signorini2011use}. It is interesting to note that the tweet data collected
-is time-stamped and geolocated harnessing the user’s self-declared home
-location, since this method can be adopted to our project. And~\cite
-{signorini2011use} proposed a real-time simulated social media based learning
-model that utilizes disease progress model to constrain the temporal
-model.They~\cite{basiri2021novel} used 4-deep neural network model and a
-classical machine learning model to analyze the sentiment of COVID-19 tweets.
-A meta learner learns to predict from the feature outputs of the presiding
-models.
+The storyline generation problem was first studied by Kumar et al.~\cite
+{kumar2008algorithms} as a generic redescription mining technique, by which a
+series of redescription between the given disjoint and dissimilar object sets
+and corresponding subsets are discovered. Storytelling is an efficient way to
+solve the issue of information overload. By extracting critical and connected
+entities, the original document is struc{}turally summarized. Current works
+contain two categories: Textual Storytelling~\cite
+{kumar2008algorithms,hossain2012storytelling,fang2011rex,voskarides2015learning,lee2012joint,shahaf2012metro}
+and Visual Storytelling~\cite
+{kim2014joint,park2015expressing,wang2012generating}. A storyline generation
+component is deployed in the proposed system. The storyline generation is
+capable of summarizing the highlighted COVID-19-related events with social
+media data, and a visualization component is also developed to demonstrate
+the comparisons between the official releases of the mitigation events and
+the identified topic events from social media. 
 
-Until now, the existing study have focused primarily on the public's
-sentiment analysis related to the pandemic, or used it as a case study to
-verify the performance of specific machine learning or deep learning models.
-There are relatively few studies focused on the pandemic, and very few
-studies have examined dynamic changes over time in specific regions. However,
-our research is based on spatio-temporal data mining, and by conducting the
-sentiment analysis based on Twitter data mining, it is possible to track
-changes in emotional patterns accompanying changes in time and location.
-Furthermore, we leverage the latest technology in natural language processing
-that is the attention mechanism, and the detailed sub topic clustering is
-carried out under the big theme of pandemic. Through this, it becomes
-possible to analyze people's emotions through detailed sub-topics. Once our
-long-term goal is achieved, by doing spatio-temporal data mining-based
-emotional analysis and detailed sub-topic clustering techniques at an
-in-depth level, we can contribute to deeper and more meaningful sentiment
-analysis. 
+In this paper, we present the Pandemic Topic Detection and Monitoring system
+(PanTop), which is capable of 1) collecting and retrieving social media data
+on COVID-19-related topics, 2) detecting hidden trends of topics from social
+media posts, and 3) generating and visualizing storylines for the extracted
+COVID-19-related topics. This paper is structured as follows: Section~\ref
+{sec:method} discusses the architecture of the PanTop system; Section~\ref
+{sec:exp} illustrates the experiment and data of the system; Section~\ref
+{sec:case} demonstrates the case studies revealed by the PanTop system; in
+section~\ref{sec:conclude}, we conclude our discoveries from the proposed
+PanTop system. 
