--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -53,7 +53,7 @@ The storyline generation problem was first studied by Kumar et al.~\cite
 series of redescription between the given disjoint and dissimilar object sets
 and corresponding subsets are discovered. Storytelling is an efficient way to
 solve the issue of information overload. By extracting critical and connected
-entities, the original document is struc{}turally summarized. Current works
+entities, the original document is structurally summarized. Current works
 contain two categories: Textual Storytelling~\cite
 {kumar2008algorithms,hossain2012storytelling,fang2011rex,voskarides2015learning,lee2012joint,shahaf2012metro}
 and Visual Storytelling~\cite
