--- a/sections/experiment.tex
+++ b/sections/experiment.tex
@@ -4,7 +4,7 @@ We apply our research method experimentally on a large spatial-temporal dataset 
 \subsection{Dataset Description and Experiment Setup}
 {\bf Dataset}: 
 
-The dataset we used is CORONAVIRUS (COVID-19) GEO-TAGGED TWEETS DATASET form IEEE DataPort. Due to the tweets spreading policy. We can’t access the completed tweets directly. Thus. We use a transfer program named Twarc to batch fetch every tweet in the dataset. Twarc is a python package that is used to export tweets automatically. The main principle is that Twarc will make use of the registration information from twitter developer platform and get the permission from Twitter. Then Twitter can monitor the whole process of getting tweets. This way is completely legal and doesn’t violate the privacy protocols set by Twitter. But it also causes some issues. If the tweets account is banned or the permission has been changed, we can’t access the content anymore. Normally Twitter doesn’t send any warning message but changes the content of tweets to a prompt message. So some filtering process is necessary to ensure that the data set is not contaminated with irrelevant information.
+The dataset we used is CORONAVIRUS (COVID-19) GEO-TAGGED TWEETS DATASET form IEEE DataPort. This dataset includes English tweets related to the epidemic from 2020 to 2022 around the world. To reduce noise, we only look at Data from May 2020 to August 2021 in the continental United States. In order to reflect the public's attitude to the epidemic prevention measures, we used the keyword list to conduct further screening.
 
 {\bf Metrics}:
 
@@ -64,7 +64,7 @@ For each cluster we get, we focus on keywords and representative tweet within it
 
 
 \subsubsection{Storyline}
-Fig~\ref{fig:storyline for lda} shows a result of storyline from LDA-BERT.  
+Fig~\ref{fig:storyline for lda_bert} shows a result of storyline from LDA-BERT.  
 
 Each node in the graph represents a topic. From the label of nodes, we can get a list of high frequency words and published time. The number attached on the edges stand for a measure for correlation. Nodes with dark backgrounds are connected in series to form a storyline. The connection relationship between nodes reflects the connection between topics.
 
