--- a/sections/experiment.tex
+++ b/sections/experiment.tex
@@ -70,7 +70,7 @@ Each node in the graph represents a topic. From the label of nodes, we can get a
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.5\textwidth]{imgs/lda_bert/storyline.png}
+\includegraphics[width=0.5\textwidth]{imgs/lda_bert/storyline_lda_bert.gv.pdf}
 \caption{slice of storyline for LDA-BERT}
 \label{fig:storyline for lda_bert}
 \end{figure}
