--- a/sections/experiment.tex
+++ b/sections/experiment.tex
@@ -53,7 +53,7 @@ For each cluster we get, we focus on keywords and representative tweet within it
 \caption{wordcloud for one topic}
 \label{fig:wordcloud}
 }
-\hspace{10pt}    
+\hspace{10pt}   
 {
 \includegraphics[width=0.4\textwidth]{imgs/lda_bert/center_sentence.png}
 \caption{centroid tweet set}
@@ -64,7 +64,7 @@ For each cluster we get, we focus on keywords and representative tweet within it
 
 
 \subsubsection{Storyline}
-Fig~\ref{fig:storyline for lda_bert} shows a result of storyline from LDA-BERT.  
+Fig~\ref{fig:storyline for lda} shows a result of storyline from LDA-BERT.  
 
 Each node in the graph represents a topic. From the label of nodes, we can get a list of high frequency words and published time. The number attached on the edges stand for a measure for correlation. Nodes with dark backgrounds are connected in series to form a storyline. The connection relationship between nodes reflects the connection between topics.
 
